prevent overflow of editor

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -182,6 +182,7 @@
 .ql-editor {
   background: transparent;
   color: var(--p-text-primary);
+  overflow-wrap: anywhere;
 }
 
 .ql-editor.ql-blank {
